--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/universal:2",
+    "image": "ubuntu:latest",
     "build": { "dockerfile": "Dockerfile" },
     "features": {
     }
